--- a/module_setting/build.gradle
+++ b/module_setting/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "25.0.3"
 
     defaultConfig {
-        applicationId "com.zmm.module_setting"
+//        applicationId "com.zmm.module_setting"
         minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
