--- a/module_setting/src/main/module/AndroidManifest.xml
+++ b/module_setting/src/main/module/AndroidManifest.xml
@@ -5,7 +5,8 @@
                  android:label="@string/app_name"
                  android:supportsRtl="true">
 
-        <activity android:name=".act.TwSettingActivity"/>
+        <activity android:name=".act.TwSettingActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".act.TwUserEditActivity"/>
         <activity android:name=".act.TwResetPasswordActivity"/>
         <activity android:name=".act.TwLogoActivity"/>
